# Palindrome

./: LICENSE  README.md  main.py  main.py.old  player.py  pyproject.toml  requirements.txt  subsonic.py
data/ui/: loginWindow.xml  mainWindow.xml
